--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Latest compiled and minified CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="/css/styles.css">
     <title>Document</title>
@@ -33,19 +38,30 @@
     </nav>
 
     <div class="MobileNav">
-        <div class="logo"></div>
+        <div class="logo"><i class="fa fa-gamepad" aria-hidden="true"></i></div>
         <div class="MobileNavMenu">
             <ul>
                 <li>Home</li>
                 <li>Home</li>
-                <li>Home</li>
-                <li>Home</li>
+                <li>Contact</li>
+                <li>About</li>
+                <li>connect</li>
             </ul>
         </div>
         <div class="burgerMenu right menuDesign">
             <i onclick="menuClick()" class="fa fa-bars" aria-hidden="true"></i>
+            <i onclick="menuClick()" class="fa fa-times" aria-hidden="true"></i>
+
         </div>
     </div>
+
+
+    <div class="box1 col-11  col-md-11    ">
+      
+
+    </div>
+   
+
 </body>
 
 </html>
