--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 
@@ -65,4 +65,4 @@
 </body>
 
 </html>
-<script src="/javascript/index.js"></script>
+<script src="javascript/index.js"></script>
